prevented auto zoom in on mobile input

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
 
 .editorStyles {
   font-family: var(--font-ibm-plex-mono) !important;
-  font-size: 13px !important;
+  font-size: 16px !important;
   letter-spacing: 0 !important;
   line-height: 1.2 !important;
   /* font-feature-settings: "tnum" on, "lnum" on !important;
